testdata/golden/sema/valid/raw_pointers/extern_ptr.sg
type C = {};

extern<C> {
    fn memcpy(dst: *byte, src: *byte, n: uint) -> nothing;
}

fn main() -> int {
    return 0;
}
