testdata/golden/sema/invalid/raw_pointers/fn_signature_ptr.sg
fn f(p: *int) -> *int { return p; }

fn main() -> int {
    return 0;
}
